--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 clinic-info:
   name: 'my clinic'
   working-hours: '8-17'
+
+spring:
+
+    jackson.property-naming-strategy: SNAKE_CASE
+    jpa:
+        show-sql: true
+
+logging.level.org.hibernate: DEBUG
