--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ dependencies {
 
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
-	runtime('com.h2database:h2')
-	//runtime('org.postgresql:postgresql')
+	//runtime('com.h2database:h2')
+	runtime('org.postgresql:postgresql')
 
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
