--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,15 @@ clinic-info:
   working-hours: '8-17'
 
 spring:
+    datasource:
+        url: jdbc:postgresql:pet_clinic
+        username: postgres
+        password: postgres
 
     jackson.property-naming-strategy: SNAKE_CASE
     jpa:
         show-sql: true
+        database-platform: org.hibernate.dialect.PostgreSQLDialect
+        hibernate.ddl-auto: update
 
 logging.level.org.hibernate: DEBUG
