--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile "com.fasterxml.jackson.datatype:jackson-datatype-jdk8"
+	compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+	compile 'org.hibernate:hibernate-java8'
 
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
