--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,15 @@ spring:
         username: postgres
         password: postgres
 
-    jackson.property-naming-strategy: SNAKE_CASE
+    jackson:
+        property-naming-strategy: SNAKE_CASE
+        serialization:
+            write-dates-as-timestamps: false
+            indent-output: true
     jpa:
         show-sql: true
         database-platform: org.hibernate.dialect.PostgreSQLDialect
-        hibernate.ddl-auto: update
+        hibernate.ddl-auto: create
+        open-in-view: false
 
-logging.level.org.hibernate: DEBUG
+#logging.level.org.hibernate: DEBUG
